# aiosqla_admin

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
aiosqla_admin/: dashboard_context.py  settings.py
aiosqla_admin/base/: dashboard.py  handler.py
aiosqla_admin/base/callback_data/: unit.py
aiosqla_admin/base/callback_data/configs/: action.py  callback.py  module.py  viewof.py
aiosqla_admin/base/deeplink_data/: action.py  param_preview.py  param_referral.py
aiosqla_admin/base/mechanics/: dialog.py  navigation.py
aiosqla_admin/base/views/: base_view.py
aiosqla_admin/base/views/detail/: handlers.py  view.py
aiosqla_admin/decorators/: cd_filters.py  memory.py
aiosqla_admin/features/preview/: main.py  media.py  model.py
aiosqla_admin/memory/: base.py  detail.py  list.py  provider.py
aiosqla_admin/middlewares/: preview.py
aiosqla_admin/ui/: generator.py
aiosqla_admin/ui/data/: base_extractor.py  extractor.py  reorder_logic.py  schema_extractor.py  sqla_extractor.py
aiosqla_admin/ui/field/: base_renderer.py  default_renderer.py
aiosqla_admin/utils/: dashboard_instance.py  eager_refresh.py  instance.py  schema.py  sqla_model.py  validation_utils.py
aiosqla_admin/utils/pagination/: data_preparer.py  stmt_selector.py
aiosqla_admin/utils/ui/: ui_data.py  ui_text.py
example_project/: base.py  bot.py
example_project/database/: base_schema.py  enums.py  schemas.py
example_project/database/models/: layer_base.py  user.py
example_project/scenarios/: dashboard.py  echo.py  router.py  start.py
(+6 files in other folders)
